[FIX] Cypht: fix some broken css styles after migration to bootstrap5 --- * Move lib/cypht/modules/tiki/site.scss content to theme/base_files/scss/_cypht-tiki.scss
* [FIX] Cypht: fix some broken css styles after migration to bootstrap5

See merge request tikiwiki/tiki!4530

--- a/themes/base_files/css/tiki_base.scss
+++ b/themes/base_files/css/tiki_base.scss
@@ -81,4 +81,23 @@
 	display: flex;
 	gap: 3rem;
 }
+
+//Cypth select2
+.form-floating {
+    .select2-container--bootstrap-5 {
+        width: 100% !important;
+        .select2-selection {
+            min-height: calc($form-floating-height + .3rem) !important;
+            padding: $form-floating-padding-y $form-floating-padding-x !important;
+            width: 100% !important;
+            > .select2-selection__rendered {
+                margin-top: .4rem !important;
+            }
+        }
+        .floating-select-label { z-index: 1000; }
+    }
+    .form-select {
+        width: 100% !important;
+    }
+}
 /* End of file */
